# My-Smart-City-Project

app/: globals.css  layout.tsx  page.tsx
backend/: Main.py  Models.py  README.md  database.py  env.example  iot_simulator.py  pyproject.toml
components/Ui/: alert-dialog.tsx  card.tsx
components/smart-city/: buildings.tsx  city-scene.tsx  data-overlays, tsx  hud tsx  iot-panel,tsx  roads.tsx  street-lights.tsx  vehicles. tsx
