[project]
name = "smart-city-iot-backend"
version = "1.0.0"
description = "Smart City IoT Backend Service with Python"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "mysql-connector-python>=8.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "pytz>=2023.3",
    "asyncio-contextmanager>=1.0.0",
    "httpx>=0.25.0",
    "fastapi-cors>=0.0.6"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
